# bedu-claim-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/api/: types.rs
src/client/: claimer.rs  http.rs  mod.rs
