[package]
name = "bedu-claim"
version = "0.1.0"
edition = "2024"

[lib]
name = "bedu_claim"
path = "src/lib.rs"

[[bin]]
name = "bedu-claim"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
